# wagic

./: .gitignore  .gitmodules  .travis.yml  BUILDING.md  CHANGELOG.md  CMakeLists.txt  LAZORDI Gold  LICENSE  README.md  appveyor.yml  index.html  travis-script.sh  upload-binaries.py  upload-binaries.sh
JGE/: CMakeLists.txt  JGE - win8.vcxproj  JGE.sln  JGE.vcproj  JGE.vcxproj  LICENSE  Makefile  Makefile.1xx  Makefile.3xx  Makefile.hge  Makefile.input  Makefile.linux  mk1xx.bat  mk3xx.bat  readme.txt
JGE/Dependencies/lib/: SDL.dll.recipe  SDL.exp  SDL.lib  SDL_VS2010.vcxproj.FileListAbsolute.txt  Version.res  freetype.def  freetype.lib  giflib.lib  libjpeg-static-mt-debug.lib  libpngd.lib  zlibd.lib
JGE/Dependencies/libjpeg/: Android.mk  jconfig.h  libjpeg.vcxproj
JGE/Dependencies/libpng/: libpng.vcxproj
JGE/Dependencies/zlib/: ReadMe.txt  gzlib.c  gzwrite.c  zlib.vcxproj  zlib.vcxproj.filters
JGE/boost_thread_src/: libboost_date_time-vc143-mt-1_44.lib  thread.cpp  tss_pe.cpp
JGE/docs/html/: annotated.html  class_j_animator-members.html  class_j_animator.html  class_j_animator_frame-members.html  class_j_animator_frame.html  class_j_animator_frame__coll__graph.dot  class_j_animator_frame__coll__graph.md5  class_j_animator_object-members.html  class_j_animator_object.html  class_j_animator_object__coll__graph.dot  class_j_animator_object__coll__graph.md5  class_j_app-members.html  class_j_app.html  class_j_file_system-members.html  class_j_file_system.html  class_j_file_system__coll__graph.dot  class_j_file_system__coll__graph.md5  class_j_g_b_k_font-members.html  class_j_g_b_k_font.html  class_j_g_b_k_font__coll__graph.dot  class_j_g_b_k_font__coll__graph.md5  class_j_g_e-members.html  class_j_g_e.html  class_j_g_e__coll__graph.dot  class_j_g_e__coll__graph.md5  class_j_game_launcher-members.html  class_j_game_launcher.html  class_j_game_object-members.html  class_j_game_object.html  class_j_game_object__coll__graph.dot  class_j_game_object__coll__graph.md5  class_j_game_object__inherit__graph.dot  class_j_game_object__inherit__graph.md5  class_j_image_filter-members.html  class_j_image_filter.html  class_j_l_b_font-members.html  class_j_l_b_font.html  class_j_l_b_font__coll__graph.dot  class_j_l_b_font__coll__graph.md5  class_j_m_d2_model-members.html  (+85 more)
JGE/exceptionHandler/: README.txt
JGE/exceptionHandler/prx/: exception.prx  makefile
JGE/exceptionHandler/test/: makefile
JGE/exceptionHandler/utility/: exception.h
JGE/include/: DebugRoutines.h  Downloader.h  Encoding.h  JAnimator.h  JApp.h  JAssert.h  JAudio.h  JCooleyesMP3.h  JDistortionMesh.h  JFileSystem.h  JGBKFont.h  JGE.h  JGameLauncher.h  JGameObject.h  JGui.h  JInputSystem.h  JLBFont.h  JLogger.h  JMD2Model.h  JMP3.h  JNetwork.h  JOBJModel.h  JParticle.h  JParticleEffect.h  JParticleEmitter.h  JParticleSystem.h  JRenderer.h  JResourceManager.h  JSocket.h  JSoundSystem.h  JSpline.h  JSprite.h  JTTFont.h  JTypes.h  OutputCapturer.h  PrecompiledHeader.h  Threading.h  Vector2D.h  Vector3D.h  corewrapper.h  (+3 more)
JGE/include/hge/: hgecolor.h  hgedistort.h  hgefont.h  hgeparticle.h  hgerect.h  hgevector.h
JGE/include/psp/: mikmod.h
JGE/include/qt/: corewrapper.h  filedownloader.h  qtcorewrapper.h
JGE/include/unzip/: unzip.h
JGE/lib/win/: jge.lib
JGE/src/: Downloader.cpp  Encoding.cpp  JAnimator.cpp  JApp.cpp  JAudio.cpp  JCooleyesMP3.cpp  JDistortionMesh.cpp  JFileSystem.cpp  JGBKFont.cpp  JGE.cpp  JGameObject.cpp  JGfx-fake.cpp  JGfx.cpp  JGui.cpp  JInputSystem.cpp  JLBFont.cpp  JLogger.cpp  JMD2Model.cpp  JMP3.cpp  JNetwork.cpp  JOBJModel.cpp  JParticle.cpp  JParticleEffect.cpp  JParticleEmitter.cpp  JParticleSystem.cpp  JResourceManager.cpp  JSfx.cpp  JSocket.cpp  JSpline.cpp  JSprite.cpp  JTTFont.cpp  OutputCapturer.cpp  Qtconsole.cpp  Qtmain.cpp  SDLmain.cpp  Vector2D.cpp  WRLmain.cpp  Xmain.cpp  corewrapper.cpp  decoder_prx.c  (+9 more)
JGE/src/DirectX/: BasicLoader.cpp  BasicLoader.h  BasicMath.h  BasicReaderWriter.cpp  BasicSprites.GeometryShader.gs.hlsl  BasicSprites.GeometryShader.vs.hlsl  BasicSprites.cpp  BasicSprites.h  CommonStates.cpp  ConstantBuffer.h  JGfx - Copy.cpp  JGfx.cpp  JSfx.cpp  PlatformHelpers.h  SharedResourcePool.h  SpriteBatch.cpp  VertexTypes.cpp
JGE/src/android/: JSfx.cpp
JGE/src/hge/: hgecolor.cpp  hgedistort.cpp  hgefont.cpp  hgeparticle.cpp  hgepmanager.cpp  hgerect.cpp  hgevector.cpp
JGE/src/iOS/: EAGLView.h  EAGLView.m  EAGLViewController.h  EAGLViewController.m  EAGLViewController.xib  ES2Renderer.h  ES2Renderer.m  ESRenderer.h  JSfx.cpp  wagicAppDelegate.h  wagicAppDelegate.m
JGE/src/linux/: JGfx.cpp  JSfx.cpp
JGE/src/pc/: JGfx.cpp  JSfx.cpp  JSocket.cpp
JGE/src/qt/: corewrapper.cpp  filedownloader.cpp  qtcorewrapper.cpp
JGE/src/tinyxml/: tinystr.h  tinyxmlparser.cpp
JGE/src/unzip/: unzip.c
JGE/src/win/: JRenderer_Win.cpp  JSocket_Win.cpp  JSoundSystem_Win.cpp
JGE/src/windows/: JSfx.cpp
JGE/src/zipFS/: fileio.h  static_assert.h  stdafx.cpp  stdafx.h  stdint_old.h  zfs.cpp  zfs.vcproj  zfsystem.cpp  zfsystem.h  ziphdr.cpp  ziphdr.h  zstream.cpp  zstream.h
projects/mtg/: .qmake.stash  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Makefile.1xx  Makefile.3xx  Makefile.linux  Res  ZipArchive.mm  build.number.properties  build.properties  build.xml  mk3xx.bat  moc_Downloader.cpp  moc_corewrapper.cpp  moc_filedownloader.cpp  moc_predefs.h  mtg.props  mtg.sln  mtg.vsprops  mtg_vs2010.sln  template.vcproj  template.vcxproj  template.vcxproj.filters  updateAndroidManifest.groovy  valgrind.supp  wagic  wagic copy-Info.plist  wagic-Info.plist  wagic-Qt.pro  wagic-SDL.pro  wagic-qt.pro  wagic.desktop  wagic.pri  wagic.pro  wagic.vcxproj  wagic_Prefix.pch
projects/mtg/Android/: .gitignore  AndroidManifest.xml  ant.properties  build.xml  default.properties  project.properties
projects/mtg/MacOS/: Info.plist  wagic.launcher
projects/mtg/WRL/: Wagic.Shared.vcxitems  Wagic.Shared.vcxitems.filters  Wagic.WindowsDesktop.Package.appxmanifest  Wagic.WindowsDesktop.vcxproj  Wagic.WindowsPhone.Package.appxmanifest  Wagic.WindowsPhone.vcxproj  Wagic.sln  wagic.vcxproj  (+2 more)
(+685 files in other folders)
